Checkout multiple repos side-by-side requires addition of path

--- a/.github/workflows/install-tanzu-application-platform.yml
+++ b/.github/workflows/install-tanzu-application-platform.yml
@@ -222,7 +222,7 @@ jobs:
     runs-on: ubuntu-22.04
 
     env:
-      GITOPS_DIR: tanzu/application-platform
+      GITOPS_DIR: template/tanzu/application-platform
 
     # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-22.04, macos-latest, or windows-latest
     defaults:
@@ -235,24 +235,28 @@ jobs:
       uses: actions/checkout@v4
       with:
         repository: clicktruck/application-templates
+        path: template
 
     - name: Checkout azure-actions
       if: inputs.cluster-provider == 'aks'
       uses: actions/checkout@v4
       with:
         repository: clicktruck/azure-actions
+        path: runnable
 
     - name: Checkout aws-actions
       if: inputs.cluster-provider == 'eks'
       uses: actions/checkout@v4
       with:
         repository: clicktruck/aws-actions
+        path: runnable
 
     - name: Checkout google-actions
       if: inputs.cluster-provider == 'gke'
       uses: actions/checkout@v4
       with:
         repository: clicktruck/google-actions
+        path: runnable
 
     ## We'll likely source manufactured sensitive data like domain, private registry credentials from a secrets management store like AWS Secrets Manager or Azure KeyVault
 
@@ -358,7 +362,7 @@ jobs:
 
     - name: "Install Tanzu Application Platform on Azure"
       if: inputs.cluster-provider == 'aks'
-      uses: ./docker/actions/azure/tanzu-runsh-setup-action
+      uses: ./runnable/docker/actions/azure/tanzu-runsh-setup-action
       with:
         script-contents: ${{ needs.encode-tanzu-application-platform-install-script.outputs.result }}
         script-arguments: "${{ env.GITOPS_DIR }} ${{ inputs.deployment-name }}-${{ inputs.active-profile }}"
@@ -370,7 +374,7 @@ jobs:
 
     - name: "Install Tanzu Application Platform on AWS"
       if: inputs.cluster-provider == 'eks'
-      uses: ./docker/actions/aws/tanzu-runsh-setup-action
+      uses: ./runnable/docker/actions/aws/tanzu-runsh-setup-action
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -381,7 +385,7 @@ jobs:
 
     - name: "Install Tanzu Application Platform on Google"
       if: inputs.cluster-provider == 'gke'
-      uses: ./docker/actions/google/tanzu-runsh-setup-action
+      uses: ./runnable/docker/actions/google/tanzu-runsh-setup-action
       with:
         google-project-id: ${{ secrets.GOOGLE_PROJECT_ID }}
         google-service-account-key: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_KEY }}
