--- a/.github/workflows/uninstall-tanzu-standard-repo.yml
+++ b/.github/workflows/uninstall-tanzu-standard-repo.yml
@@ -65,16 +65,18 @@ jobs:
       uses: actions/checkout@v4
       with:
         repository: clicktruck/application-templates
+        path: template
 
     - name: Checkout azure-actions
       if: inputs.cluster-provider == 'aks'
       uses: actions/checkout@v4
       with:
         repository: clicktruck/azure-actions
+        path: runnable
 
     - name: "Uninstall Tanzu Standard Repo on AKS"
       if: inputs.cluster-provider == 'aks'
-      uses: ./docker/actions/azure/tanzu-runsh-setup-action
+      uses: ./runnable/docker/actions/azure/tanzu-runsh-setup-action
       with:
         azure-subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
         azure-tenant-id: ${{ secrets.AZURE_AD_TENANT_ID }}
@@ -89,10 +91,11 @@ jobs:
       uses: actions/checkout@v4
       with:
         repository: clicktruck/aws-actions
+        path: runnable
 
     - name: "Uninstall Tanzu Standard Repo on EKS"
       if: inputs.cluster-provider == 'eks'
-      uses: ./docker/actions/aws/tanzu-runsh-setup-action
+      uses: ./runnable/docker/actions/aws/tanzu-runsh-setup-action
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -106,10 +109,11 @@ jobs:
       uses: actions/checkout@v4
       with:
         repository: clicktruck/google-actions
+        path: runnable
 
     - name: "Uninstall Tanzu Standard Repo on GKE"
       if: inputs.cluster-provider == 'gke'
-      uses: ./docker/actions/google/tanzu-runsh-setup-action
+      uses: ./runnable/docker/actions/google/tanzu-runsh-setup-action
       with:
         google-project-id: ${{ secrets.GOOGLE_PROJECT_ID }}
         google-service-account-key: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_KEY }}
