--- a/.github/workflows/install-tanzu-cluster-essentials.yml
+++ b/.github/workflows/install-tanzu-cluster-essentials.yml
@@ -64,28 +64,32 @@ jobs:
       uses: actions/checkout@v4
       with:
         repository: clicktruck/application-templates
+        path: template
 
     - name: Checkout azure-actions
       if: inputs.cluster-provider == 'aks'
       uses: actions/checkout@v4
       with:
         repository: clicktruck/azure-actions
+        path: runnable
 
     - name: Checkout aws-actions
       if: inputs.cluster-provider == 'eks'
       uses: actions/checkout@v4
       with:
         repository: clicktruck/aws-actions
+        path: runnable
 
     - name: Checkout google-actions
       if: inputs.cluster-provider == 'gke'
       uses: actions/checkout@v4
       with:
         repository: clicktruck/google-actions
+        path: runnable
 
     - name: "Install Tanzu Cluster Essentials on AKS"
       if: inputs.cluster-provider == 'aks'
-      uses: ./docker/actions/azure/tanzu-runsh-setup-action
+      uses: ./runnable/docker/actions/azure/tanzu-runsh-setup-action
       with:
         script-contents: ${{ needs.encode-tanzu-cluster-essentials-install-script.outputs.result }}
         script-arguments: '${{ secrets.TANZU_NETWORK_API_TOKEN }} ${{ secrets.TANZU_NETWORK_USERNAME }} ${{ secrets.TANZU_NETWORK_PASSWORD }}'
@@ -97,7 +101,7 @@ jobs:
 
     - name: "Install Tanzu Cluster Essentials on GKE"
       if: inputs.cluster-provider == 'gke'
-      uses: ./docker/actions/google/tanzu-runsh-setup-action
+      uses: ./runnable/docker/actions/google/tanzu-runsh-setup-action
       with:
         script-contents: ${{ needs.encode-tanzu-cluster-essentials-install-script.outputs.result }}
         script-arguments: '${{ secrets.TANZU_NETWORK_API_TOKEN }} ${{ secrets.TANZU_NETWORK_USERNAME }} ${{ secrets.TANZU_NETWORK_PASSWORD }}'
@@ -107,7 +111,7 @@ jobs:
 
     - name: "Install Tanzu Cluster Essentials on EKS"
       if: inputs.cluster-provider == 'eks'
-      uses: ./docker/actions/aws/tanzu-runsh-setup-action
+      uses: ./runnable/docker/actions/aws/tanzu-runsh-setup-action
       with:
         script-contents: ${{ needs.encode-tanzu-cluster-essentials-install-script.outputs.result }}
         script-arguments: '${{ secrets.TANZU_NETWORK_API_TOKEN }} ${{ secrets.TANZU_NETWORK_USERNAME }} ${{ secrets.TANZU_NETWORK_PASSWORD }}'
