--- a/.github/workflows/multi-cluster-tanzu-application-platform-install-on-google-dispatch.yml
+++ b/.github/workflows/multi-cluster-tanzu-application-platform-install-on-google-dispatch.yml
@@ -58,11 +58,13 @@ jobs:
       uses: actions/checkout@v4
       with:
         repository: clicktruck/application-templates
+        path: template
 
     - name: Checkout google-actions
       uses: actions/checkout@v4
       with:
         repository: clicktruck/google-actions
+        path: runnable
 
     # - id: 'auth'
     #   name: Authenticate to Google Cloud
@@ -79,7 +81,7 @@ jobs:
 
     - name: "Fetch secrets from secret manager instance"
       id: obtain-secret-valuemap
-      uses: ./docker/actions/google/tanzu-cli-setup-action
+      uses: ./runnable/docker/actions/google/tanzu-cli-setup-action
       with:
         google-project-id: ${{ inputs.google-project-id }}
         google-service-account-key: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_KEY }}
