--- a/.github/workflows/onboard-cluster-to-app-live-view.yml
+++ b/.github/workflows/onboard-cluster-to-app-live-view.yml
@@ -145,7 +145,7 @@ jobs:
     runs-on: ubuntu-22.04
 
     env:
-      GITOPS_DIR: tanzu/application-platform
+      GITOPS_DIR: template/tanzu/application-platform
       HAS_OBSERVED_CLUSTERS: ${{ secrets.OBSERVED_CLUSTERS != '' }}
 
     # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-22.04, macos-latest, or windows-latest
@@ -159,31 +159,35 @@ jobs:
       uses: actions/checkout@v4
       with:
         repository: clicktruck/application-templates
+        path: template
 
     - name: Checkout azure-actions
       if: inputs.cluster-provider == 'aks'
       uses: actions/checkout@v4
       with:
         repository: clicktruck/azure-actions
+        path: runnable
 
     - name: Checkout aws-actions
       if: inputs.cluster-provider == 'eks'
       uses: actions/checkout@v4
       with:
         repository: clicktruck/aws-actions
+        path: runnable
 
     - name: Checkout google-actions
       if: inputs.cluster-provider == 'gke'
       uses: actions/checkout@v4
       with:
         repository: clicktruck/google-actions
+        path: runnable
 
     ## We'll likely source manufactured sensitive data like domain, private registry credentials from a secrets management store like AWS Secrets Manager or Azure KeyVault
 
     - name: Fetch observed cluster details
       id: details
       if: env.HAS_OBSERVED_CLUSTERS == 'true' && inputs.cluster-provider == 'aks'
-      uses: ./docker/actions/azure/tanzu-runsh-setup-action
+      uses: ./runnable/docker/actions/azure/tanzu-runsh-setup-action
       with:
         script-contents: ${{ needs.encode-observe-clusters-script.outputs.result }}
         script-arguments: "${{ secrets.OBSERVED_CLUSTERS }} ${{ secrets.KUBECONFIG_CONTENTS }}"
@@ -191,7 +195,7 @@ jobs:
     - name: Fetch observed cluster details on AWS
       id: details-on-aws
       if: env.HAS_OBSERVED_CLUSTERS == 'true' && inputs.cluster-provider == 'eks'
-      uses: ./docker/actions/aws/tanzu-runsh-setup-action
+      uses: ./runnable/docker/actions/aws/tanzu-runsh-setup-action
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -202,7 +206,7 @@ jobs:
     - name: Fetch observed cluster details on Google
       id: details-on-google
       if: env.HAS_OBSERVED_CLUSTERS == 'true' && inputs.cluster-provider == 'gke'
-      uses: ./docker/actions/google/tanzu-runsh-setup-action
+      uses: ./runnable/docker/actions/google/tanzu-runsh-setup-action
       with:
         google-project-id: ${{ secrets.GOOGLE_PROJECT_ID }}
         google-service-account-key: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_KEY }}
@@ -387,7 +391,7 @@ jobs:
 
     - name: "Update Tanzu Application Platform"
       if: inputs.cluster-provider == 'aks'
-      uses: ./docker/actions/azure/tanzu-runsh-setup-action
+      uses: ./runnable/docker/actions/azure/tanzu-runsh-setup-action
       with:
         script-contents: ${{ needs.encode-tanzu-application-platform-install-script.outputs.result }}
         script-arguments: "${{ env.GITOPS_DIR }} ${{ inputs.deployment-name }}-${{ inputs.active-profile }}"
@@ -399,7 +403,7 @@ jobs:
 
     - name: "Update Tanzu Application Platform on AWS"
       if: inputs.cluster-provider == 'eks'
-      uses: ./docker/actions/aws/tanzu-runsh-setup-action
+      uses: ./runnable/docker/actions/aws/tanzu-runsh-setup-action
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -410,7 +414,7 @@ jobs:
 
     - name: "Update Tanzu Application Platform on Google"
       if: inputs.cluster-provider == 'gke'
-      uses: ./docker/actions/google/tanzu-runsh-setup-action
+      uses: ./runnable/docker/actions/google/tanzu-runsh-setup-action
       with:
         google-project-id: ${{ secrets.GOOGLE_PROJECT_ID }}
         google-service-account-key: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_KEY }}
