--- a/.github/workflows/relocate-tap-images-from-tanzu-network-to-container-registry.yml
+++ b/.github/workflows/relocate-tap-images-from-tanzu-network-to-container-registry.yml
@@ -85,24 +85,27 @@ jobs:
       uses: actions/checkout@v4
       with:
         repository: clicktruck/azure-actions
+        path: runnable
 
     - name: Checkout aws-actions
       if: contains(fromJson('["elastic-container-registry","harbor-on-aws"]'), inputs.container-image-registry-provider)
       uses: actions/checkout@v4
       with:
         repository: clicktruck/aws-actions
+        path: runnable
 
     - name: Checkout google-actions
       if: contains(fromJson('["google-artifact-registry","google-container-registry","harbor-on-google"]'), inputs.container-image-registry-provider)
       uses: actions/checkout@v4
       with:
         repository: clicktruck/google-actions
+        path: runnable
 
     ## We'll likely source manufactured sensitive data like domain, private registry credentials from a secrets management store like AWS Secrets Manager or Azure KeyVault
 
     - name: "Relocate images from Tanzu Network for Tanzu Application Platform install to Container Registry repository on Azure"
       if: contains(fromJson('["azure-container-registry","harbor-on-azure"]'), inputs.container-image-registry-provider)
-      uses: ./docker/actions/azure/tanzu-runsh-setup-action
+      uses: ./runnable/docker/actions/azure/tanzu-runsh-setup-action
       with:
         script-contents: ${{ needs.encode-tanzu-application-platform-relocate-images-script.outputs.result }}
         script-arguments: "${{ secrets.TANZU_NETWORK_USERNAME }} ${{ secrets.TANZU_NETWORK_PASSWORD }} ${{ inputs.container-image-registry-url }} ${{ inputs.container-image-registry-username }} ${{ inputs.container-image-registry-password }} ${{ inputs.target-repo }}"
@@ -113,7 +116,7 @@ jobs:
 
     - name: "Relocate images from Tanzu Network for Tanzu Application Platform install to Container Registry repository on AWS"
       if: contains(fromJson('["elastic-container-registry","harbor-on-aws"]'), inputs.container-image-registry-provider)
-      uses: ./docker/actions/aws/tanzu-runsh-setup-action
+      uses: ./runnable/docker/actions/aws/tanzu-runsh-setup-action
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -123,7 +126,7 @@ jobs:
 
     - name: "Relocate images from Tanzu Network for Tanzu Application Platform install to Container Registry repository on Google"
       if: contains(fromJson('["google-artifact-registry","google-container-registry","harbor-on-google"]'), inputs.container-image-registry-provider)
-      uses: ./docker/actions/google/tanzu-runsh-setup-action
+      uses: ./runnable/docker/actions/google/tanzu-runsh-setup-action
       with:
         google-project-id: ${{ secrets.GOOGLE_PROJECT_ID }}
         google-service-account-key: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_KEY }}
