--- a/.github/workflows/uninstall-tanzu-application-platform.yml
+++ b/.github/workflows/uninstall-tanzu-application-platform.yml
@@ -79,7 +79,7 @@ jobs:
     runs-on: ubuntu-22.04
 
     env:
-      GITOPS_DIR: tanzu/application-platform
+      GITOPS_DIR: template/tanzu/application-platform
 
     # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-22.04, macos-latest, or windows-latest
     defaults:
@@ -92,28 +92,32 @@ jobs:
       uses: actions/checkout@v4
       with:
         repository: clicktruck/application-templates
+        path: template
 
     - name: Checkout azure-actions
       if: inputs.cluster-provider == 'aks'
       uses: actions/checkout@v4
       with:
         repository: clicktruck/azure-actions
+        path: runnable
 
     - name: Checkout aws-actions
       if: inputs.cluster-provider == 'eks'
       uses: actions/checkout@v4
       with:
         repository: clicktruck/aws-actions
+        path: runnable
 
     - name: Checkout google-actions
       if: inputs.cluster-provider == 'gke'
       uses: actions/checkout@v4
       with:
         repository: clicktruck/google-actions
+        path: runnable
 
     - name: "Check if there are workloads in dev namespace(s), then delete them on AKS"
       if: inputs.dev-namespaces != '' && inputs.cluster-provider == 'aks'
-      uses: ./docker/actions/azure/tanzu-runsh-setup-action
+      uses: ./runnable/docker/actions/azure/tanzu-runsh-setup-action
       with:
         enable-tanzu-cli: "true"
         azure-subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
@@ -126,7 +130,7 @@ jobs:
 
     - name: "Check if there are workloads in dev namespace(s), then delete them on EKS"
       if: inputs.dev-namespaces != '' && inputs.cluster-provider == 'eks'
-      uses: ./docker/actions/aws/tanzu-runsh-setup-action
+      uses: ./runnable/docker/actions/aws/tanzu-runsh-setup-action
       with:
         enable-tanzu-cli: "true"
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -138,7 +142,7 @@ jobs:
 
     - name: "Check if there are workloads in dev namespace(s), then delete them on GKE"
       if: inputs.dev-namespaces != '' && inputs.cluster-provider == 'gke'
-      uses: ./docker/actions/google/tanzu-runsh-setup-action
+      uses: ./runnable/docker/actions/google/tanzu-runsh-setup-action
       with:
         enable-tanzu-cli: "true"
         google-project-id: ${{ secrets.GOOGLE_PROJECT_ID }}
@@ -150,7 +154,7 @@ jobs:
 
     - name: "Uninstall Tanzu Application Platform on AKS"
       if: inputs.cluster-provider == 'aks'
-      uses: ./docker/actions/azure/tanzu-runsh-setup-action
+      uses: ./runnable/docker/actions/azure/tanzu-runsh-setup-action
       with:
         azure-subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
         azure-tenant-id: ${{ secrets.AZURE_AD_TENANT_ID }}
@@ -162,7 +166,7 @@ jobs:
 
     - name: "Uninstall Tanzu Application Platform on EKS"
       if: inputs.cluster-provider == 'eks'
-      uses: ./docker/actions/aws/tanzu-runsh-setup-action
+      uses: ./runnable/docker/actions/aws/tanzu-runsh-setup-action
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -173,7 +177,7 @@ jobs:
 
     - name: "Uninstall Tanzu Application Platform on GKE"
       if: inputs.cluster-provider == 'gke'
-      uses: ./docker/actions/google/tanzu-runsh-setup-action
+      uses: ./runnable/docker/actions/google/tanzu-runsh-setup-action
       with:
         google-project-id: ${{ secrets.GOOGLE_PROJECT_ID }}
         google-service-account-key: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_KEY }}
