--- a/.github/workflows/uninstall-tanzu-data-services-repo.yml
+++ b/.github/workflows/uninstall-tanzu-data-services-repo.yml
@@ -45,7 +45,7 @@ jobs:
     - name: Encode
       id: encode
       run: |
-          result="$(cat scripts/uninstall-package.sh | base64 -w 0)"
+          result="$(cat uninstall-package.sh | base64 -w 0)"
           echo "result=${result}" >> $GITHUB_OUTPUT
 
   uninstall:
