--- a/.github/workflows/uninstall-tanzu-ingress.yml
+++ b/.github/workflows/uninstall-tanzu-ingress.yml
@@ -40,10 +40,12 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v4
+      with:
+        repository: clicktruck/scripts
     - name: Encode
       id: encode
       run: |
-          result="$(cat scripts/uninstall-package.sh | base64 -w 0)"
+          result="$(cat uninstall-package.sh | base64 -w 0)"
           echo "result=${result}" >> $GITHUB_OUTPUT
 
   uninstall:
