--- a/.github/workflows/install-tanzu-data-services-repo.yml
+++ b/.github/workflows/install-tanzu-data-services-repo.yml
@@ -52,10 +52,12 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v4
+      with:
+        repository: clicktruck/scripts
     - name: Encode
       id: encode
       run: |
-          result="$(cat scripts/install-package.sh | base64 -w 0)"
+          result="$(cat install-package.sh | base64 -w 0)"
           echo "result=${result}" >> $GITHUB_OUTPUT
 
   install:
