--- a/.github/workflows/onboard-cluster-to-app-live-view.yml
+++ b/.github/workflows/onboard-cluster-to-app-live-view.yml
@@ -117,10 +117,12 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v4
+      with:
+        repository: clicktruck/scripts
     - name: Encode
       id: encode
       run: |
-        result="$(cat scripts/install-package.sh | base64 -w 0)"
+        result="$(cat install-package.sh | base64 -w 0)"
         echo "result=${result}" >> $GITHUB_OUTPUT
 
   encode-observe-clusters-script:
@@ -133,10 +135,12 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v4
+      with:
+        repository: clicktruck/scripts
     - name: Encode
       id: encode
       run: |
-        result="$(cat scripts/observe-clusters.sh | base64 -w 0)"
+        result="$(cat observe-clusters.sh | base64 -w 0)"
         echo "result=${result}" >> $GITHUB_OUTPUT
 
   install:
