--- a/.github/workflows/install-tanzu-data-services-repo.yml
+++ b/.github/workflows/install-tanzu-data-services-repo.yml
@@ -65,7 +65,7 @@ jobs:
     runs-on: ubuntu-22.04
 
     env:
-      GITOPS_DIR: tanzu/data-services
+      GITOPS_DIR: template/tanzu/data-services
 
     steps:
     # Checkout the repository to the GitHub Actions runner
