--- a/.github/workflows/install-tanzu-standard-repo.yml
+++ b/.github/workflows/install-tanzu-standard-repo.yml
@@ -65,7 +65,7 @@ jobs:
     runs-on: ubuntu-22.04
 
     env:
-      GITOPS_DIR: tanzu/standard
+      GITOPS_DIR: template/tanzu/standard
 
     steps:
     # Checkout the repository to the GitHub Actions runner
