--- a/.github/workflows/uninstall-tanzu-data-services-repo.yml
+++ b/.github/workflows/uninstall-tanzu-data-services-repo.yml
@@ -53,7 +53,7 @@ jobs:
     runs-on: ubuntu-22.04
 
     env:
-      GITOPS_DIR: tanzu/data-services
+      GITOPS_DIR: template/tanzu/data-services
 
     # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-22.04, macos-latest, or windows-latest
     defaults:
