--- a/.github/workflows/uninstall-tanzu-ingress.yml
+++ b/.github/workflows/uninstall-tanzu-ingress.yml
@@ -53,7 +53,7 @@ jobs:
     runs-on: ubuntu-22.04
 
     env:
-      GITOPS_DIR: tanzu/ingress/${{ inputs.target-cloud }}
+      GITOPS_DIR: template/tanzu/ingress/${{ inputs.target-cloud }}
 
     # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-22.04, macos-latest, or windows-latest
     defaults:
