Complete plumbing to enable fetch and execution of harbor CLI

--- a/.github/workflows/create-harbor-project-dispatch.yml
+++ b/.github/workflows/create-harbor-project-dispatch.yml
@@ -27,3 +27,4 @@ jobs:
     secrets:
       HARBOR_USERNAME: ${{ github.event.inputs.domain }}
       HARBOR_PASSWORD: ${{ github.event.inputs.password }}
+      PA_TOKEN: ${{ secrets.PA_TOKEN }}
