--- a/.github/workflows/create-harbor-project.yml
+++ b/.github/workflows/create-harbor-project.yml
@@ -39,14 +39,7 @@ jobs:
         DECODED_HARBOR_PASSWORD=$(echo "$HARBOR_PASSWORD" | base64 -d)
         ./harbor login --username $HARBOR_USERNAME --password $DECODED_HARBOR_PASSWORD --url "https://$HARBOR_API_ENDPOINT"
         set -x
-        cat <<EOF > new-project.yml
-        kind: project/CreateProjectParams
-        apiVersion: v1alpha1
-        spec:
-          xresourcenameinlocation: false
-          project:
-            projectname: "$NEW_HARBOR_PROJECT"
-            public: true
-        EOF
+        echo "kind: project/CreateProjectParams\napiVersion: v1alpha1\nspec:\n  xresourcenameinlocation: false\n  project:\n    projectname: $NEW_HARBOR_PROJECT\n    public: true" > new-project.yml
+        cat new-project.yml
         ./harbor project create --filename new-project.yml
         ./harbor project list
