--- a/.github/workflows/create-harbor-project.yml
+++ b/.github/workflows/create-harbor-project.yml
@@ -32,6 +32,15 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    - uses: arnested/go-version-action@v1
+      id: go-version
+
+    - name: Install Go
+      uses: actions/setup-go@v5
+      with:
+        go-version: 1.18
+        check-latest: true
+
     - name: Create new Harbor project
       run: |
         gh release download -R hinyinlam/cli-for-harbor -p '*Linux_x86_64.tar.gz' --skip-existing
@@ -40,6 +49,5 @@ jobs:
         ./harbor login --username $HARBOR_USERNAME --password $DECODED_HARBOR_PASSWORD --url "https://$HARBOR_API_ENDPOINT"
         set -x
         echo "kind: project/CreateProjectParams\napiVersion: v1alpha1\nspec:\n  xresourcenameinlocation: false\n  project:\n    projectname: $NEW_HARBOR_PROJECT\n    public: true" > new-project.yml
-        cat new-project.yml
         ./harbor project create --filename new-project.yml
         ./harbor project list
