--- a/.github/workflows/create-harbor-project.yml
+++ b/.github/workflows/create-harbor-project.yml
@@ -32,11 +32,19 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Install Go
-      uses: actions/setup-go@v5
+    - name: Write manifest for new Harbor project
+      uses: "DamianReeves/write-file-action@master"
       with:
-        go-version: 1.18
-        check-latest: true
+        path: ./new-project.yml
+        write-mode: overwrite
+        contents: |
+          kind: project/CreateProjectParams
+          apiVersion: v1alpha1
+          spec:
+            xresourcenameinlocation: false
+            project:
+              projectname: "$NEW_HARBOR_PROJECT"
+              public: true
 
     - name: Create new Harbor project
       run: |
@@ -45,6 +53,5 @@ jobs:
         DECODED_HARBOR_PASSWORD=$(echo "$HARBOR_PASSWORD" | base64 -d)
         ./harbor login --username $HARBOR_USERNAME --password $DECODED_HARBOR_PASSWORD --url "https://$HARBOR_API_ENDPOINT"
         set -x
-        echo "kind: project/CreateProjectParams\napiVersion: v1alpha1\nspec:\n  xresourcenameinlocation: false\n  project:\n    projectname: \"$NEW_HARBOR_PROJECT\"\n    public: true" > new-project.yml
-        ./harbor project create --filename new-project.yml
+        ./harbor project create --filename ./new-project.yml
         ./harbor project list
